--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-auth-session": "^5.5.2",
+    "expo-clipboard": "^6.0.3",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
