--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-auth-session": "^5.5.2",
+    "expo-av": "^14.0.7",
     "expo-clipboard": "^6.0.3",
     "expo-font": "~12.0.9",
     "expo-linear-gradient": "^13.0.2",
@@ -42,7 +43,9 @@
     "react-native-screens": "3.31.1",
     "react-native-track-player": "^4.1.1",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2"
+    "react-native-webrtc": "^124.0.5",
+    "react-redux": "^9.1.2",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
