--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "build-dev": "npx eas build --profile development --platform android"
@@ -17,42 +17,47 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/blur": "^4.4.1",
-    "@react-native-community/slider": "^4.5.2",
-    "@react-navigation/native": "^6.0.2",
+    "@react-native-community/slider": "4.5.5",
+    "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
-    "expo": "~51.0.28",
-    "expo-auth-session": "^5.5.2",
-    "expo-av": "^14.0.7",
-    "expo-clipboard": "^6.0.3",
-    "expo-font": "~12.0.9",
-    "expo-linear-gradient": "^13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-secure-store": "^13.0.2",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "expo": "^52.0.28",
+    "expo-auth-session": "~6.0.3",
+    "expo-av": "~15.0.2",
+    "expo-build-properties": "^0.13.2",
+    "expo-clipboard": "~7.0.1",
+    "expo-file-system": "~18.0.8",
+    "expo-font": "~13.0.3",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
+    "expo-secure-store": "~14.0.1",
+    "expo-sharing": "~13.0.1",
+    "expo-splash-screen": "~0.29.21",
+    "expo-status-bar": "~2.0.1",
+    "expo-system-ui": "~4.0.7",
+    "expo-updates": "~0.26.15",
+    "expo-web-browser": "~14.0.2",
+    "qs": "^6.14.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.6",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-track-player": "^4.1.1",
-    "react-native-web": "~0.19.10",
+    "react-native-web": "~0.19.13",
     "react-native-webrtc": "^124.0.5",
     "react-redux": "^9.1.2",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "expo-dev-client": "^4.0.25",
+    "@types/react": "~18.3.12",
+    "expo-dev-client": "~5.0.11",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest-expo": "~52.0.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
