--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
-    "expo": "^52.0.28",
+    "expo": "~52.0.36",
+    "expo-application": "^6.0.2",
     "expo-auth-session": "~6.0.3",
     "expo-av": "~15.0.2",
     "expo-build-properties": "^0.13.2",
@@ -33,15 +34,15 @@
     "expo-router": "~4.0.17",
     "expo-secure-store": "~14.0.1",
     "expo-sharing": "~13.0.1",
-    "expo-splash-screen": "~0.29.21",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
-    "expo-system-ui": "~4.0.7",
-    "expo-updates": "~0.26.15",
+    "expo-system-ui": "~4.0.8",
+    "expo-updates": "~0.27.1",
     "expo-web-browser": "~14.0.2",
     "qs": "^6.14.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "0.76.7",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -55,9 +56,9 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
-    "expo-dev-client": "~5.0.11",
+    "expo-dev-client": "~5.0.12",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.3",
+    "jest-expo": "~52.0.5",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
