--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "open-music",
+  "name": "beatify",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "2.0.1",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
+    "build": "npx eas build --profile production --platform android",
     "build-dev": "npx eas build --profile development --platform android"
   },
   "jest": {
