subtitle fix, musiclist ui

--- a/app.json
+++ b/app.json
@@ -73,6 +73,7 @@
     },
     "updates": {
       "url": "https://u.expo.dev/9ea0b37a-e3da-42f8-9c23-c9566efbbd5e"
-    }
+    },
+    "owner": "ankitby2"
   }
 }
